<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDelActivity">

    <LinearLayout
        android:id="@+id/linearEdit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="33.33"
            android:gravity="center"
            android:text="@string/text_month"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="33.33"
            android:gravity="center"
            android:text="@string/text_day"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="33.33"
            android:gravity="center"
            android:text="@string/text_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearEdit1">

        <EditText
            android:id="@+id/textEditMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33.33"
            android:gravity="center"
            android:lines="1"
            android:maxLength="2"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textEditDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33.33"
            android:gravity="center"
            android:lines="1"
            android:maxLength="2"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/textEditYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33.33"
            android:gravity="center"
            android:lines="1"
            android:maxLength="4"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearEdit3"
        app:layout_constraintTop_toBottomOf="@+id/linearEdit2">

        <EditText
            android:id="@+id/textEditTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textMultiLine" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonSave"
            style="@style/AppTheme.Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/buttonDelete"
            style="@style/AppTheme.Buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>